# coffee.tmux.backup

./: .gitignore  CONTRIBUTING.md  README.md  backup.py  coffee.tmux  main.py  pyproject.toml  requirements.txt  test.py  ui.py
cli/: main.py  utils.py
cli/commands/: __init__.py  disable.py  enable.py  info.py  install.py  list_plugins.py  remove.py  update.py  upgrade.py
configs/: spotify.yaml  tmux-ip-address.yaml  tmux-net-speed.yml  tmuxcpu.yaml
core/: __init__.py  lock_file_manager.py  pluginInstaller.py  pluginLoader.py  pluginRemover.py  pluginSourcer.py  pluginUpdater.py
ui/: app.py  constants.py  state.py  utils.py
ui/tabs/: base.py  home.py  install.py  remove.py  update.py
ui/widgets/: rich_display.py
